// Format:
// Date (mm/dd/yr)
// rNumber [Author]
// 	* Modifications.
// 	- Details.
//========================================

02/11/2010
	r191 [pakpil]
	* Updated SCs in const.txt

02/11/2010
	r189 [pakpil]
	* Fixed SC_INVISIBILITY:
		- Fixed its duration.
		- Shouldn't lose the state when the SC hits.
		- Fixed ASPD lost, was too high. Still need the official value.

02/10/2010
	r188 [pakpil]
	* Fixed clif_displayexp that was displaying same exp on Base Exp and Job Exp won. Bug report 149.
	* Fixed SC_INVISIBILITY duration.
	* Fixed SC_REPRODUCE and SC_AUTOSHADOWSPELL that should set the reprodue skill level as current SC_REPRODUCE level.
	* Added all new official standing/spawn and walking packets (0x7f7, 0x7f8 and 0x7f9). Take care with your PACKETVER.

02/10/2010
	r187 [Rytech]
	*Added the reballanced headgears to the item_db2.
	- 2 versions now exist. V1 is the one used when the headgears when released and contain the skill bonuses.
	- V2 is the version with all the latest ballances.
	- V1 of the headgears are all disabled by defult and V2 is all enabled.
	- Should I just remove the old ones?

02/09/2010
	r186 [pakpil]
	* Fixed vending.

02/09/2010
	r185 [pakpil]
	* Added WM_POEMOFNETHERWORLDS skill.
	* Fixed WM_SEVERE_RAINSTORM skill. Should be working as intended.
	* Fixed standing packet.
	* Fixed a mistake in pc_jobchange.
	* Fixed DeepSleep status def according with some test in kRO-RE.

02/08/2010
	r184 [pakpil]
	* Fixed clif_displayexp packet. This should show won and lost experience.
	* Fixed clif_vendinglist. Should use 0x800 packet instead 0x801.

02/03/2010
	r176 [Rytech]
	*Added skill max level, SP requirements, and names for Sorcerer's summon skills.
	-I also enabled the 6 skills as their's enough support for them to appear.
	-Latest clients do support these tags, but no official icons has been released yet. So take caution for now.
	-Im now ready for its official release. =D

02/04/2010
	r176 [pakpil]
	* Fixed RK_RUNEMASTERY.